# tourbot

./: CMakeLists.txt  readme.md
conf.examples/: attentions.messages  bot.conf  filth.list  greets.messages  lut.conf  marks.json  messages.list  pengobot.conf  randoms.messages  replies.conf  unknowncmd.messages  whereis.messages  whoami.messages  worldlist.conf
src/: CMakeLists.txt  acfile.h  client.h  cmds.h  config.h  drone.h  group.h  main.cpp  props.h  strutils.h  urlname.cpp  utils.h  verrors.h
