cmake_minimum_required(VERSION 3.5)
project(pengobot)
add_definitions(-DCURL_STATICLIB)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)
SET(CMAKE_CXX_FLAGS "-O3")
find_package(CURL REQUIRED) 
include_directories(${CURL_INCLUDE_DIR})
add_subdirectory(src)
install(TARGETS pengobot RUNTIME DESTINATION bin)
